cmake_minimum_required(VERSION 3.16)
project(cppstudy)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled2 main.cpp )
add_executable(set_example set_example.cpp)
add_executable(sort_example sort_example.cpp)
add_executable(class_example class_example.cpp)
add_executable(erase_example erase_example.cpp)
add_executable(lower_bound lower_bound.cpp)
add_executable(set_operations set_operations.cpp)